2006-04-24  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: fixing when data is None in as_string
	* tests/test_ObjectList.py: a test case when data is None

2006-04-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py:
	* kiwi/ui/test/player.py:
	Run the script in a separate thread and the application
	in the main thread. Makes it easier to integrate the testsuite
	in applications that can't be run in threads.

2006-04-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* examples/framework/sizegroup/shell.glade:
	* examples/framework/sizegroup/slave_view.glade:
	* examples/framework/sizegroup/slave_view2.glade:
	* examples/framework/sizegroup/slaves.py:
	Sizegroup merging example
	* kiwi/ui/views.py:
	When attaching a slave, merge the sizegroups with the same name

2006-04-19  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/objectlist.py (_ContextMenu._on_menuitem__activate): 
	Call row_changed for all rows after changing the visibility a
	column. This will make the treeview remeasure nicely.

2006-04-18  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/radiobutton.py (ProxyRadioButton.__init__): Set 
	the group after calling the parents constructor, otherwise we'll
	get :toggled emitted before the object is initialized properly.	

2006-04-12  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.__init__): 
	Add row-activated signal and make the old double-click signal
	only be emitted when a double-click on the list. Fixes #2526

2006-04-11  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: always use a converter to set the 
	contents of a column in a ObjectList. Fixes #2523

2006-04-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/combomixin.py (ComboMixin.prefill) 
	(ComboMixin.append_item): Check for basestring instead of str
	so Unicode can be used, thanks to Alceste Scalas
